objects/TenantBillingUsageEvent__dll.object
<CustomObject>
    <fields>
        <fullName>BusinessEnvType__c</fullName>
        <label>Business Environment Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EntitlementOrgId__c</fullName>
        <label>Entitlement Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EventTime__c</fullName>
        <label>Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ExtractTime__c</fullName>
        <label>Extract Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FeatureDeveloperName__c</fullName>
        <label>Feature Developer Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalOrganization__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResourceIdOrApiName__c</fullName>
        <label>Resource ID Or API Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResourceType__c</fullName>
        <label>Resource Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TenantId__c</fullName>
        <label>Tenant ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageQualifiedName__c</fullName>
        <label>Usage Qualified Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageReportingOrgId__c</fullName>
        <label>Usage Reporting Org ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsageValue__c</fullName>
        <label>Usage Value</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>cdp_sys_PartitionDate__c</fullName>
        <label>cdp_sys_PartitionDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>